--- a/src/assets/fonts/fonts.css
+++ b/src/assets/fonts/fonts.css
@@ -1,12 +1,5 @@
 @font-face {
     font-family: "Roboto Condensed";
-    src: url("./RobotoCondensed-Regular.ttf") format("truetype");
-    font-weight: 400;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Roboto Condensed";
     src: url("./RobotoCondensed-Bold.ttf") format("truetype");
     font-weight: 700;
     font-style: normal;
@@ -16,5 +9,25 @@
     font-family: "Roboto Condensed";
     src: url("./RobotoCondensed-Black.ttf") format("truetype");
     font-weight: 900;
+    font-style: normal;
+}
+@font-face {
+    font-family: "IBM Plex Sans";
+    src: url("./IBMPlexSans-Regular.ttf") format("truetype");
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "IBM Plex Sans";
+    src: url("./IBMPlexSans-Medium.ttf") format("truetype");
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "IBM Plex Sans";
+    src: url("./IBMPlexSans-Bold.ttf") format("truetype");
+    font-weight: 700;
     font-style: normal;
 }
