--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,50 @@
 @import "tailwindcss";
 @import "./assets/fonts/fonts.css";
+
+body {
+    font-family: "IBM Plex Sans", sans-serif;
+}
+
+.scrollbar-custom::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+.scrollbar-custom::-webkit-scrollbar-thumb {
+    background-color: #b0b0b0;
+    border-radius: 8px;
+}
+
+.scrollbar-custom::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.scrollbar-custom::-webkit-scrollbar-thumb:hover {
+    background-color: #888888;
+}
+
+.scrollbar-custom::-webkit-scrollbar-button {
+    background-color: transparent;
+    height: 16px;
+    width: 16px;
+}
+
+.scrollbar-custom::-webkit-scrollbar-button:vertical:decrement {
+    border-left: 4px solid transparent;
+    border-right: 4px solid transparent;
+    border-bottom: 6px solid #b0b0b0;
+    margin-top: 2px;
+}
+
+.scrollbar-custom::-webkit-scrollbar-button:vertical:increment {
+    border-left: 4px solid transparent;
+    border-right: 4px solid transparent;
+    border-top: 6px solid #b0b0b0;
+    margin-bottom: 2px;
+}
+
+.font-test-roboto-black {
+    font-family: "Roboto Condensed", sans-serif;
+    font-weight: 900;
+    font-size: 24px;
+}
