--- a/src/shared/components/sidebar/side-bar-styles.css
+++ b/src/shared/components/sidebar/side-bar-styles.css
@@ -1,8 +1,8 @@
 /* side-bar-styles.css */
 .inner-border-yellow {
-    box-shadow: inset 0 0 0 2px #fcd34d;
+    box-shadow: inset -3px 0 0 0 #fcd34d;
 }
 
 .inner-border-blue {
-    box-shadow: inset 0 0 0 2px #3b82f6;
+    box-shadow: inset -3px 0 0 0 #3b82f6;
 }
