--- a/src/features/words/components/word-management/components/word-table/components/word-table.style.css
+++ b/src/features/words/components/word-management/components/word-table/components/word-table.style.css
@@ -61,7 +61,7 @@
 }
 
 .custom-checkbox.dark {
-    background-color: #1f2937;
+    background-color: rgb(13, 19, 26);
     border-color: #374151;
 }
 
